<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/first_team"
        android:text="@string/team_a"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/second_team"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/team_style" />

    <TextView
        android:id="@+id/first_score"
        android:text="@string/default_score"
        android:layout_marginEnd="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/second_score"
        app:layout_constraintTop_toBottomOf="@id/first_team"
        style="@style/team_style"/>

    <TextView
        android:id="@+id/second_team"
        android:text="@string/team_b"
        app:layout_constraintLeft_toRightOf="@id/first_team"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/team_style"
        />

    <TextView
        android:id="@+id/second_score"
        android:text="@string/default_second_score"
        app:layout_constraintLeft_toRightOf="@id/first_score"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/second_team"
        style="@style/team_style"
        />

    <Button
        android:id="@+id/first_touchdown"
        android:text="@string/touchdown"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/second_touchdown"
        app:layout_constraintTop_toBottomOf="@id/first_score"
        style="@style/button_style" />

    <Button
        android:id="@+id/second_touchdown"
        android:text="@string/touchdown"
        app:layout_constraintLeft_toRightOf="@id/first_touchdown"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/second_score"
        style="@style/button_style" />

    <Button
        android:id="@+id/first_field_goal"
        android:text="@string/field_goal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/second_field_goal"
        app:layout_constraintTop_toBottomOf="@id/first_touchdown"
        style="@style/button_style" />

    <Button
        android:id="@+id/second_field_goal"
        android:text="@string/field_goal"
        app:layout_constraintLeft_toRightOf="@id/first_field_goal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/second_touchdown"
        style="@style/button_style" />

    <Button
        android:id="@+id/first_extra_point"
        android:text="@string/extra_point"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/second_extra_point"
        app:layout_constraintTop_toBottomOf="@id/first_field_goal"
        style="@style/button_style" />

    <Button
        android:id="@+id/second_extra_point"
        android:text="@string/extra_point"
        app:layout_constraintLeft_toRightOf="@id/first_extra_point"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/second_field_goal"
        style="@style/button_style" />

    <Button
        android:id="@+id/first_safety"
        android:text="@string/safety"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/second_safety"
        app:layout_constraintTop_toBottomOf="@id/first_extra_point"
        style="@style/button_style" />

    <Button
        android:id="@+id/second_safety"
        android:text="@string/safety"
        app:layout_constraintLeft_toRightOf="@id/first_safety"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/second_extra_point"
        style="@style/button_style" />

    <Button
        android:id="@+id/reset"
        android:text="@string/reset"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_safety"
        style="@style/button_style" />

</androidx.constraintlayout.widget.ConstraintLayout>